# spack-packages

./: .env  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  646.patch  CHANGELOG.md  CODEOWNERS  COPYRIGHT  PR_DESCRIPTION.md  README.md  pyproject.toml  pytest.ini  run-unit-tests
.ci/: env  style_check.sh  windows_test_setup.ps1
.ci/configs/: repos.yaml
.ci/gitlab/: .gitlab-ci.yml  config.yaml  include.yaml
.ci/gitlab/configs/: ci.yaml  config.yaml  multi-src-mirrors.yaml.in  repos.yaml  single-src-pr-mirrors.yaml.in  single-src-protected-mirrors.yaml.in
.ci/gitlab/configs/cray-sles/: packages.yaml
.ci/gitlab/configs/cray-sles/x86_64_v3/: ci.yaml
.ci/gitlab/configs/darwin/: ci.yaml  config.yaml
.ci/gitlab/configs/linux/: ci.yaml
.ci/gitlab/configs/linux/aarch64/: ci.yaml
.ci/gitlab/configs/linux/neoverse_v1/: ci.yaml
.ci/gitlab/configs/linux/neoverse_v2/: ci.yaml
.ci/gitlab/configs/linux/x86_64_v3/: ci.yaml
.ci/gitlab/configs/linux/x86_64_v4/: ci.yaml
.ci/gitlab/configs/win64/: ci.yaml  packages.yaml
.ci/gitlab/configs/win64/x86_64/: ci.yaml
.ci/gitlab/scripts/common/: aggregate_package_logs.spack.py  clone_spack.sh  noop_job.py  write_dotenv.py
.ci/gitlab/stacks/aws-pcluster-neoverse_v1/: spack.yaml
.ci/gitlab/stacks/aws-pcluster-x86_64_v4/: spack.yaml
.ci/gitlab/stacks/bootstrap-aarch64-darwin/: spack.yaml
.ci/gitlab/stacks/bootstrap-x86_64-linux-gnu/: spack.yaml
.ci/gitlab/stacks/build_systems/: spack.yaml
.ci/gitlab/stacks/data-vis-sdk/: spack.yaml
.ci/gitlab/stacks/developer-tools-aarch64-linux-gnu/: spack.yaml
.ci/gitlab/stacks/developer-tools-darwin/: spack.yaml
.ci/gitlab/stacks/developer-tools-x86_64_v3-linux-gnu/: spack.yaml
.ci/gitlab/stacks/e4s/: spack.yaml
.ci/gitlab/stacks/e4s-cray-rhel/: spack.yaml
.ci/gitlab/stacks/e4s-cray-sles/: spack.yaml
.ci/gitlab/stacks/e4s-neoverse-v2/: spack.yaml
.ci/gitlab/stacks/e4s-oneapi/: spack.yaml
.ci/gitlab/stacks/e4s-rocm-external/: spack.yaml
.ci/gitlab/stacks/hep/: spack.yaml
.ci/gitlab/stacks/ml-darwin-aarch64-mps/: spack.yaml
.ci/gitlab/stacks/ml-linux-aarch64-cpu/: spack.yaml
.ci/gitlab/stacks/ml-linux-aarch64-cuda/: spack.yaml
.ci/gitlab/stacks/ml-linux-x86_64-cpu/: spack.yaml
.ci/gitlab/stacks/ml-linux-x86_64-cuda/: spack.yaml
.ci/gitlab/stacks/ml-linux-x86_64-rocm/: spack.yaml
.ci/gitlab/stacks/radiuss/: spack.yaml
.ci/gitlab/stacks/radiuss-aws/: spack.yaml
.ci/gitlab/stacks/radiuss-aws-aarch64/: spack.yaml
.ci/gitlab/stacks/tools-sdk/: spack.yaml
.ci/gitlab/stacks/tutorial/: spack.yaml
.ci/gitlab/stacks/windows-vis/: spack.yaml
.ci/repos/spack_repo/ci/: __init__.py  repo.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/checkout-spack/: action.yml
.github/skills/: cve-deprecation.md  package-update.md  pr-review.md  py-package-update.md
.github/workflows/: audit.yaml  bootstrap.yml  ci.yaml  erf_test.yml  prechecks.yml  stale.yaml  style.yaml  triage.yml  unit_tests.yaml  update-src-mirror.yml
.github/workflows/requirements/style/: requirements.txt
.release/: CHANGELOG.header.template  branch.sh  create_release_note.sh
repos/: README.md
repos/spack_repo/builtin/: repo.yaml  slirp.out
repos/spack_repo/builtin/build_systems/: _checks.py  aspell_dict.py  autotools.py  bundle.py  cached_cmake.py  cargo.py  cmake.py  compiler.py  compiler_cache.py  cray.py  ctest.py  cuda.py  generic.py  gnu.py  go.py  lua.py  makefile.py  maven.py  meson.py  msbuild.py  nmake.py  octave.py  oneapi.py  opam.py  perl.py  pipx.py  python.py  qmake.py  r.py  racket.py  rocm.py  ruby.py  scons.py  sip.py  sourceforge.py  sourceware.py  waf.py  xorg.py
repos/spack_repo/builtin/py_starfile/: package.py
share/spack/gitlab/cloud_pipelines/stacks/tools-sdk/: spack.yaml
stacks/aws-pcluster-neoverse_v1/: spack.yaml
stacks/aws-pcluster-x86_64_v4/: spack.yaml
stacks/bootstrap-aarch64-darwin/: spack.yaml
stacks/bootstrap-x86_64-linux-gnu/: spack.yaml
stacks/build_systems/: spack.yaml
stacks/data-vis-sdk/: spack.yaml
stacks/developer-tools-aarch64-linux-gnu/: spack.yaml
stacks/developer-tools-darwin/: spack.yaml
stacks/developer-tools-x86_64_v3-linux-gnu/: spack.yaml
stacks/e4s/: spack.yaml
stacks/e4s-cray-rhel/: spack.yaml
stacks/e4s-cray-sles/: spack.yaml
stacks/e4s-neoverse-v2/: spack.yaml
stacks/e4s-oneapi/: spack.yaml
stacks/e4s-rocm-external/: spack.yaml
stacks/hep/: spack.yaml
stacks/hep-aarch64/: spack.yaml
stacks/hep-x86_64_v3/: spack.yaml
stacks/ml-darwin-aarch64-mps/: spack.yaml
stacks/ml-linux-aarch64/: spack.yaml
stacks/ml-linux-aarch64-cpu/: spack.yaml
stacks/ml-linux-aarch64-cuda/: spack.yaml
stacks/ml-linux-x86_64/: spack.yaml
stacks/ml-linux-x86_64-cpu/: spack.yaml
stacks/ml-linux-x86_64-cuda/: spack.yaml
stacks/ml-linux-x86_64-rocm/: spack.yaml
stacks/radiuss/: spack.yaml
stacks/radiuss-aarch64/: spack.yaml
stacks/radiuss-aws/: spack.yaml
stacks/radiuss-aws-aarch64/: spack.yaml
stacks/radiuss-cuda/: spack.yaml
stacks/tools-sdk/: spack.yaml
stacks/tutorial/: spack.yaml
stacks/windows-vis/: spack.yaml
tests/: build_systems.py  conftest.py
tests/data/config/: config.yaml  modules.yaml  packages.yaml
tests/repos/spack_repo/builtin_mock/: repo.yaml
