[project]
name = "spack"
description = "The spack package manager"
requires-python = ">=3.6"
dependencies = ["clingo", "setuptools"]
dynamic = ["version"]

[tool.hatch.version]
path = "repos/spack_repo/builtin/__init__.py"

[project.optional-dependencies]
dev = [
  "pip>=21.3",
  "pytest",
  "pytest-xdist",
  "setuptools",
  "click",
  "black",
  "mypy",
  "isort",
  "flake8",
  "vermin",
]
ci = ["pytest-cov", "codecov[toml]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/repos",
  "CITATION.cff",
  "COPYRIGHT",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "NOTICE",
  "README.md",
  "SECURITY.md",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.ci]
features = ["dev", "ci"]

[tool.ruff]
line-length = 99
extend-include = ["bin/spack"]
extend-exclude = ["lib/spack/external", "*.pyi"]

# This is the Spack package API. We allow these functions to be imported with
# from spack.package import *, and we should update this when the package API
# changes. This also serves to catch the usage of things that are NOT in the
# package API, so that we can avoid having them in builtin.
builtins = [
    # core spack build environment
    "configure",
    "cscript",
    "dso_suffix",
    "make_jobs",
    "msbuild",
    "nmake",
    "prefix",
    "python",
    "python_include",
    "python_platlib",
    "python_purelib",
    "spack_cc",
    "spack_cxx",
    "spack_f77",
    "spack_fc",
    "static_to_shared_library",
    # defined in packages or build systems, e.g. -- these can be removed over time
    "aclocal",
    "autoconf",
    "autoheader",
    "autom4te",
    "automake",
    "autoreconf",
    "autoscan",
    "autoupdate",
    "bazel",
    "cargo",
    "cmake",
    "ctest",
    "gem",
    "glibtool",
    "glibtoolize",
    "gmake",
    "go",
    "ifnames",
    "kentutils_htslib_include_dir",
    "kentutils_include_dir",
    "kentutils_lib_dir",
    "libtool",
    "libtoolize",
    "lua",
    "luarocks",
    "make",
    "make",
    "meson",
    "msbuild",
    "ninja",
    "ninja",
    "nmake",
    "octave",
    "perl",
    "perl_lib_dir",
    "pip",
    "plumed",
    "pypy",
    "python",
    "python_include",
    "python_platlib",
    "python_purelib",
    "qmake",
    "R",
    "r_lib_dir",
    "rake",
    "ruby",
    "scons",
    # v2.0
    "BaseBuilder",
    "Builder",
    "Dict",
    "EnvironmentModifications",
    "Executable",
    "FileFilter",
    "FileList",
    "HeaderList",
    "InstallError",
    "LibraryList",
    "List",
    "MakeExecutable",
    "NoHeadersError",
    "NoLibrariesError",
    "Optional",
    "PackageBase",
    "Prefix",
    "ProcessError",
    "SkipTest",
    "Spec",
    "Version",
    "all_deptypes",
    "ancestor",
    "any_combination_of",
    "auto_or_any_combination_of",
    "bash_completion_path",
    "build_system_flags",
    "build_system",
    "cache_extra_test_sources",
    "can_access",
    "can_splice",
    "cd",
    "change_sed_delimiter",
    "check_outputs",
    "conditional",
    "conflicts",
    "copy_tree",
    "copy",
    "default_args",
    "depends_on",
    "determine_number_of_jobs",
    "disjoint_sets",
    "env_flags",
    "env",
    "extends",
    "filter_compiler_wrappers",
    "filter_file",
    "find_all_headers",
    "find_first",
    "find_headers",
    "find_libraries",
    "find_required_file",
    "find_system_libraries",
    "find",
    "fish_completion_path",
    "fix_darwin_install_name",
    "force_remove",
    "force_symlink",
    "get_escaped_text_output",
    "inject_flags",
    "install_test_root",
    "install_tree",
    "install",
    "is_exe",
    "join_path",
    "keep_modification_time",
    "library_extensions",
    "license",
    "maintainers",
    "makedirs",
    "mkdir",
    "mkdirp",
    "move",
    "on_package_attributes",
    "patch",
    "provides",
    "pwd",
    "redistribute",
    "register_builder",
    "remove_directory_contents",
    "remove_linked_tree",
    "remove",
    "removedirs",
    "rename",
    "requires",
    "resource",
    "rmtree",
    "run_after",
    "run_before",
    "set_executable",
    "set_install_permissions",
    "symlink",
    "test_part",
    "touch",
    "tty",
    "variant",
    "ver",
    "version",
    "when",
    "which_string",
    "which",
    "working_dir",
    "zsh_completion_path",
    # v2.1
    "CompilerError",
    "SpackError",
    # v2.2
    "BuilderWithDefaults",
    "ClassProperty",
    "CompilerPropertyDetector",
    "GenericBuilder",
    "HKEY",
    "LC_ID_DYLIB",
    "LinkTree",
    "MachO",
    "ModuleChangePropagator",
    "Package",
    "WindowsRegistryView",
    "apply_macos_rpath_fixups",
    "classproperty",
    "compare_output_file",
    "compare_output",
    "compile_c_and_execute",
    "compiler_spec",
    "create_builder",
    "dedupe",
    "delete_needed_from_elf",
    "delete_rpath",
    "environment_modifications_for_specs",
    "execute_install_time_tests",
    "filter_shebang",
    "filter_system_paths",
    "find_all_libraries",
    "find_compilers",
    "get_cmake_prefix_path",
    "get_effective_jobs",
    "get_elf_compat",
    "get_path_args_from_module_line",
    "get_user",
    "has_shebang",
    "host_platform",
    "is_system_path",
    "join_url",
    "kernel_version",
    "libc_from_dynamic_linker",
    "macos_version",
    "make_package_test_rpath",
    "memoized",
    "microarchitecture_flags_from_target",
    "microarchitecture_flags",
    "module_command",
    "parse_dynamic_linker",
    "parse_elf",
    "path_contains_subdirectory",
    "readlink",
    "safe_remove",
    "sbang_install_path",
    "sbang_shebang_line",
    "set_env",
    "shared_library_suffix",
    "spack_script",
    "static_library_suffix",
    "substitute_version_in_url",
    "windows_sfn",
]


[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E731", "E203", "F403", "F811"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "llnl",
  "spack",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
spack = ["spack"]
llnl = ["llnl"]

[tool.ruff.lint.per-file-ignores]
"var/spack/*/package.py" = ["F403", "F405", "F811", "F821"]
"*-ci-package.py" = ["F403", "F405", "F821"]

[tool.black]
line-length = 99
include = "(repos/spack_repo|tests)/.*\\.pyi?$"
skip_magic_trailing_comma = true

[tool.isort]
line_length = 99
profile = "black"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "LLNL",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_first_party = "spack"
known_llnl = "llnl"
known_third_party = ["ruamel", "six"]
src_paths = "lib"
honor_noqa = true

[tool.mypy]
files = [
  "repos/spack_repo/builtin/packages/*/package.py",
  "repos/spack_repo/builtin/build_systems/*.py",
]
mypy_path = ["spack-core/lib/spack", "spack-core/lib/spack/external", "repos/"]
allow_redefinition = true

# This and a generated import file allows supporting packages
namespace_packages = true

# To avoid re-factoring all the externals, ignore errors and missing imports
# globally, then turn back on in spack and spack submodules
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "spack.*"
ignore_errors = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "spack_repo.*"
ignore_errors = false
ignore_missing_imports = false
# we can't do this here, not a module scope option, in spack style instead
# disable_error_code = 'no-redef'

[[tool.mypy.overrides]]
module = "llnl.*"
ignore_errors = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "spack.test.packages"
ignore_errors = true

# ignore errors in fake import path for packages
[[tool.mypy.overrides]]
module = "spack.pkg.*"
ignore_errors = true
ignore_missing_imports = true

# Spack imports a number of external packages, and they *may* require Python 3.8 or
# higher in recent versions. This can cause mypy to fail because we check for 3.7
# compatibility. We could restrict mypy to run for the oldest supported version (3.7),
# but that means most developers won't be able to run mypy, which means it'll fail
# more in CI. Instead, we exclude these imported packages from mypy checking.
[[tool.mypy.overrides]]
module = [
  "IPython",
  "altgraph",
  "attr",
  "boto3",
  "botocore",
  "distro",
  "importlib.metadata",
  "jinja2",
  "jsonschema",
  "macholib",
  "markupsafe",
  "numpy",
  "pkg_resources",
  "pyristent",
  "pytest",
  "ruamel.yaml",
  "six",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pyright]
useLibraryCodeForTypes = true
reportMissingImports = true
reportWildcardImportFromLibrary = false
include = ["lib/spack", "var/spack/repos", "var/spack/test_repos"]
ignore = ["lib/spack/external"]
extraPaths = ["lib/spack", "lib/spack/external"]


[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
branch = true
source = ["bin", "lib"]
data_file = "./tests-coverage/.coverage"
omit = [
  "lib/spack/spack/test/*",
  "lib/spack/docs/*",
  "lib/spack/external/*",
  "share/spack/qa/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.paths]
source = [
  ".",
  "/Users/runner/work/spack/spack",
  "/System/Volumes/Data/home/runner/work/spack/spack",
  "D:\\a\\spack\\spack",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.vendoring]
destination = "lib/spack/external/_vendoring"
requirements = "lib/spack/external/vendor.txt"
namespace = ""

protected-files = ["__init__.py", "README.rst", "vendor.txt"]
patches-dir = "lib/spack/external/patches"

[tool.vendoring.transformations]
substitute = [
  { match = "typing_extensions", replace = "_vendoring.typing_extensions" },
  { match = "ruamel.yaml", replace = "_vendoring.ruamel.yaml" },
  { match = "altgraph", replace = "_vendoring.altgraph" },
  { match = "macholib", replace = "_vendoring.macholib" },
  { match = "from six", replace = "from _vendoring.six" },
  { match = "markupsafe", replace = "_vendoring.markupsafe" },
  { match = "jinja2", replace = "_vendoring.jinja2" },
  { match = "pyrsistent", replace = "_vendoring.pyrsistent" },
  { match = "import attr\n", replace = "import _vendoring.attr\n" },
  { match = "from attr", replace = "from _vendoring.attr" },
  { match = "import jsonschema", replace = "import _vendoring.jsonschema" },
  { match = "from jsonschema", replace = "from _vendoring.jsonschema" },
]
drop = [
  # contains unnecessary scripts
  "bin/",
  # interpreter and OS specific msgpack libs
  "msgpack/*.so",
  # unneeded parts of setuptools
  "easy_install.py",
  "setuptools",
  "pkg_resources/_vendor/",
  "pkg_resources/extern/",
  # trim vendored pygments styles and lexers
  "pygments/styles/[!_]*.py",
  "^pygments/lexers/(?!python|__init__|_mapping).*\\.py$",
  # trim rich's markdown support
  "rich/markdown.py",
  # ruamel.yaml installs unneded files
  "ruamel.*.pth",
  "pvectorc.*.so",
  # Trim jsonschema tests
  "jsonschema/tests",
  "archspec/json/tests",
  "archspec/vendor/cpuid/.gitignore",
  "pyrsistent/__init__.pyi",
]

[tool.vendoring.typing-stubs]
_pyrsistent_version = []
altgraph = []
archspec = []
distro = []
jsonschema = []
macholib = []
pyrsistent = []
ruamel = []
six = []

[tool.vendoring.license.directories]
setuptools = "pkg_resources"

[tool.vendoring.license.fallback-urls]
CacheControl = "https://raw.githubusercontent.com/ionrock/cachecontrol/v0.12.6/LICENSE.txt"
distlib = "https://bitbucket.org/pypa/distlib/raw/master/LICENSE.txt"
webencodings = "https://github.com/SimonSapin/python-webencodings/raw/master/LICENSE"
