[project]
name = "spack-repo-builtin"
description = "The builtin repository of the Spack package manager"
requires-python = ">=3.6"
version = "2026.5.0.dev0"  # note: leading zeros are normalized away, so use single digit months.

[project.optional-dependencies]
dev = [
  "pip>=21.3",
  "pytest",
  "pytest-xdist",
  "mypy",
  "ruff",
  "vermin",
]
ci = ["pytest-cov", "codecov[toml]"]

[tool.ruff]
line-length = 99

# This is the Spack package API. We allow these functions to be imported with
# from spack.package import *, and we should update this when the package API
# changes. This also serves to catch the usage of things that are NOT in the
# package API, so that we can avoid having them in builtin.
builtins = [
    # core spack build environment
    "configure",
    "cscript",
    "dso_suffix",
    "make_jobs",
    "msbuild",
    "nmake",
    "prefix",
    "python",
    "python_include",
    "python_platlib",
    "python_purelib",
    "spack_cc",
    "spack_cxx",
    "spack_f77",
    "spack_fc",
    "static_to_shared_library",
    # defined in packages or build systems, e.g. -- these can be removed over time
    "aclocal",
    "autoconf",
    "autoheader",
    "autom4te",
    "automake",
    "autoreconf",
    "autoscan",
    "autoupdate",
    "bazel",
    "cargo",
    "cmake",
    "cmake_cache_path",
    "ctest",
    "gem",
    "glibtool",
    "glibtoolize",
    "gmake",
    "go",
    "ifnames",
    "kentutils_htslib_include_dir",
    "kentutils_include_dir",
    "kentutils_lib_dir",
    "libtool",
    "libtoolize",
    "lua",
    "luarocks",
    "make",
    "make",
    "meson",
    "msbuild",
    "ninja",
    "ninja",
    "nmake",
    "octave",
    "perl",
    "perl_lib_dir",
    "pip",
    "plumed",
    "pypy",
    "python",
    "python_include",
    "python_platlib",
    "python_purelib",
    "qmake",
    "R",
    "r_lib_dir",
    "rake",
    "ruby",
    "scons",
    # v2.0
    "BaseBuilder",
    "Builder",
    "Dict",
    "EnvironmentModifications",
    "Executable",
    "FileFilter",
    "FileList",
    "HeaderList",
    "InstallError",
    "LibraryList",
    "List",
    "MakeExecutable",
    "NoHeadersError",
    "NoLibrariesError",
    "Optional",
    "PackageBase",
    "Prefix",
    "ProcessError",
    "SkipTest",
    "Spec",
    "Version",
    "all_deptypes",
    "ancestor",
    "any_combination_of",
    "auto_or_any_combination_of",
    "bash_completion_path",
    "build_system_flags",
    "build_system",
    "cache_extra_test_sources",
    "can_access",
    "can_splice",
    "cd",
    "change_sed_delimiter",
    "check_outputs",
    "conditional",
    "conflicts",
    "copy_tree",
    "copy",
    "default_args",
    "depends_on",
    "determine_number_of_jobs",
    "disjoint_sets",
    "env_flags",
    "env",
    "extends",
    "filter_compiler_wrappers",
    "filter_file",
    "find_all_headers",
    "find_first",
    "find_headers",
    "find_libraries",
    "find_required_file",
    "find_system_libraries",
    "find",
    "fish_completion_path",
    "fix_darwin_install_name",
    "force_remove",
    "force_symlink",
    "get_escaped_text_output",
    "inject_flags",
    "install_test_root",
    "install_tree",
    "install",
    "is_exe",
    "join_path",
    "keep_modification_time",
    "library_extensions",
    "license",
    "maintainers",
    "makedirs",
    "mkdir",
    "mkdirp",
    "move",
    "on_package_attributes",
    "patch",
    "provides",
    "pwd",
    "redistribute",
    "register_builder",
    "remove_directory_contents",
    "remove_linked_tree",
    "remove",
    "removedirs",
    "rename",
    "requires",
    "resource",
    "rmtree",
    "run_after",
    "run_before",
    "set_executable",
    "set_install_permissions",
    "symlink",
    "test_part",
    "touch",
    "tty",
    "variant",
    "ver",
    "version",
    "when",
    "which_string",
    "which",
    "working_dir",
    "zsh_completion_path",
    # v2.1
    "CompilerError",
    "SpackError",
    # v2.2
    "BuilderWithDefaults",
    "ClassProperty",
    "CompilerPropertyDetector",
    "GenericBuilder",
    "HKEY",
    "LC_ID_DYLIB",
    "LinkTree",
    "MachO",
    "ModuleChangePropagator",
    "Package",
    "WindowsRegistryView",
    "apply_macos_rpath_fixups",
    "classproperty",
    "compare_output_file",
    "compare_output",
    "compile_c_and_execute",
    "compiler_spec",
    "create_builder",
    "dedupe",
    "delete_needed_from_elf",
    "delete_rpath",
    "environment_modifications_for_specs",
    "execute_install_time_tests",
    "filter_shebang",
    "filter_system_paths",
    "find_all_libraries",
    "find_compilers",
    "get_cmake_prefix_path",
    "get_effective_jobs",
    "get_elf_compat",
    "get_path_args_from_module_line",
    "get_user",
    "has_shebang",
    "host_platform",
    "is_system_path",
    "join_url",
    "kernel_version",
    "libc_from_dynamic_linker",
    "macos_version",
    "make_package_test_rpath",
    "memoized",
    "microarchitecture_flags_from_target",
    "microarchitecture_flags",
    "module_command",
    "parse_dynamic_linker",
    "parse_elf",
    "path_contains_subdirectory",
    "readlink",
    "safe_remove",
    "sbang_install_path",
    "sbang_shebang_line",
    "set_env",
    "shared_library_suffix",
    "spack_script",
    "static_library_suffix",
    "substitute_version_in_url",
    "windows_sfn",
]


[tool.ruff.format]
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
extend-select = ["E", "I", "W"]
ignore = ["E731", "F403", "F811"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "spack",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
spack = ["spack"]

[tool.mypy]
files = [
  "repos/spack_repo/builtin/packages/*/package.py",
  "repos/spack_repo/builtin/build_systems/*.py",
]
mypy_path = ["repos/", "spack-core/lib/spack"]
explicit_package_bases = true
allow_redefinition = true
namespace_packages = true
disable_error_code = ["no-redef", "name-defined", "attr-defined"]

[[tool.mypy.overrides]]
module = "spack.*"
ignore_errors = true


[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
branch = true
source = ["bin", "lib"]
data_file = "./tests-coverage/.coverage"


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.paths]
source = [
  ".",
  "/Users/runner/work/spack/spack",
  "/System/Volumes/Data/home/runner/work/spack/spack",
  "D:\\a\\spack\\spack",
]

[tool.coverage.html]
directory = "htmlcov"
